testsuite/tests/indexed-types/should_fail/SimpleFail1b.stderr

SimpleFail1b.hs:4:1: error: [GHC-83865]
    • Expected kind ‘* -> *’, but ‘T1 Int Bool’ has kind ‘*’
    • In the data instance declaration for ‘T1’
